
[package]
name = "menu"
version = "0.1.0"
edition = "2021"


[dependencies]
ratatui = "0.20.0"
crossterm = "0.25"
toml = "0.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "linuxtoolbox"
path = "./mainmenu.rs"